summative.moria.Moria.scala.error
Compilation error:
Moria:3: error: not found: value isCarringBaggle
    if (!isOverBaggle && !isCarringBaggle) {
                          ^Moria:4: error: not found: value Direction
       setDirection(Direction.EAST);
                    ^Moria:7: error: not found: value isCarringBaggle
    else if (isOverBaggle && !isCarringBaggle) {
                              ^Moria:8: error: not found: value pickUpBaggle
      pickUpBaggle();
      ^Moria:10: error: not found: value isCarringBaggle
    else if (isCarringBaggle && !isOverBaggle) {
             ^Moria:11: error: not found: value Direction
      setDirection(Direction.EAST);
                   ^Moria:15: error: not found: value Direction
      setDirection(Direction.WEST);
                   ^